Updated calc display

--- a/index.html
+++ b/index.html
@@ -138,43 +138,99 @@
     <main id="main">
       <!-- ======= About Section ======= -->
 
-      <section id="about" class="about">
-        <div id="particles-js"></div>
-        <div class="container" data-aos="fade-up">
-          <div class="section-title">
-            <h2>INDEX MASSA TUBUH</h2>
-            <p>
-              Indeks Massa Tubuh (IMT) adalah indeks yang membandingkan berat
-              badan dan tinggi badan dalam kilogram dibagi tinggi badan dalam
-              meter kuadrat. IMT adalah indikator berat badan yang ideal.
-            </p>
-          </div>
-          <div class="row">
-            <div class="col"></div>
-            <div class="col" style="width: 50%">
-              <h3
-                class="text-center"
-                style="font-size: clamp(20px, 3vw, 100px)"
-              >
-                IMT &amp; PENJELASAN
-              </h3>
-              <hr />
-            </div>
-            <div class="col"></div>
-          </div>
-          <div class="row">
-            <div class="col-lg-4">
-              <img src="assets/img/imt/imt.png" class="img-fluid" alt="" />
-            </div>
-            <div class="col-lg-8 pt-4 pt-lg-0 content">
-              <p class="fst-italic">
-                Masukan Inputan yang benar agar tidak salah dalam penghitungan
-                IMT
-              </p>
+      <section>
+        <ul
+        class="nav nav-tabs d-flex justify-content-center"
+        style="width: 50%; margin: auto"
+        id="myTab"
+        role="tablist"
+      >
+        <li class="nav-item" role="presentation">
+          <button
+            class="nav-link active"
+            id="home-tab"
+            data-bs-toggle="tab"
+            data-bs-target="#home-tab-pane"
+            type="button"
+            role="tab"
+            aria-controls="home-tab-pane"
+            aria-selected="true"
+          >
+            <b>IMT</b>
+          </button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button
+            class="nav-link"
+            id="profile-tab"
+            data-bs-toggle="tab"
+            data-bs-target="#profile-tab-pane"
+            type="button"
+            role="tab"
+            aria-controls="profile-tab-pane"
+            aria-selected="false"
+          >
+            <b>Gula Darah</b>
+          </button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button
+            class="nav-link"
+            id="contact-tab"
+            data-bs-toggle="tab"
+            data-bs-target="#contact-tab-pane"
+            type="button"
+            role="tab"
+            aria-controls="contact-tab-pane"
+            aria-selected="false"
+          >
+            <b>Tekanan Darah</b>
+          </button>
+        </li>
+      </ul>
+      <div id="particles-js"></div>
+      <div
+        class="tab-content"
+        id="myTabContent"
+        style="width: 75%; margin: auto; padding-top: 3.5vh"
+      >
+        <div
+          class="tab-pane fade show active"
+          id="home-tab-pane"
+          role="tabpanel"
+          aria-labelledby="home-tab"
+          tabindex="0"
+        >
+          <div class="justify-content-center d-flex">
+            <div class="container" data-aos="fade-up">
+              <div class="section-title">
+                <h2>INDEX MASSA TUBUH</h2>
+                <p>
+                  Indeks Massa Tubuh (IMT) adalah indeks yang membandingkan
+                  berat badan dan tinggi badan dalam kilogram dibagi tinggi
+                  badan dalam meter kuadrat. IMT adalah indikator berat badan
+                  yang ideal.
+                </p>
+              </div>
               <div class="row">
-                <div class="col-lg-6">
-                  <ul>
-                    <li>
+                <div class="col"></div>
+                <div class="col" style="width: 50%">
+                  <h3 class="text-center cool-text">IMT</h3>
+                  <hr />
+                </div>
+                <div class="col"></div>
+              </div>
+              <div class="row">
+                <div class="col-lg-4">
+                  <img src="assets/img/imt/imt.png" class="img-fluid" alt="" />
+                </div>
+                <div class="col-lg-4 pt-4 pt-lg-0 content">
+                  <p class="fst-italic text-center">
+                    Masukan Inputan yang benar agar tidak salah dalam
+                    penghitungan IMT
+                  </p>
+                  <div class="row">
+                    <div class="col-lg-12">
                       <div class="row">
                         <div class="form-floating mb-3 col">
                           <input
@@ -185,7 +241,9 @@
                             placeholder="."
                           />
 
-                          <label for="berat-badan">Berat Badan (kg):</label>
+                          <label for="berat-badan" style="margin-left: 5px"
+                            >Berat Badan (kg):</label
+                          >
                         </div>
 
                         <div class="form-floating mb-3">
@@ -196,108 +254,175 @@
                             class="form-control"
                             placeholder="."
                           />
-                          <label for="tinggi-badan">Tinggi Badan (cm):</label>
+                          <label for="tinggi-badan" style="margin-left: 5px"
+                            >Tinggi Badan (cm):</label
+                          >
                         </div>
                       </div>
-                    </li>
-                    <li class="d-flex align-items-center text-center">
+
                       <div class="form-floating mb-3">
                         <button onclick="hitungBMI()" class="cool-button">
-                          Hitung
+                          Cek
                         </button>
                       </div>
-                    </li>
-                  </ul>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="row">
-            <span class="text-center cool-text" id="hasil"></span>
+        </div>
+        <div
+          class="tab-pane fade"
+          id="profile-tab-pane"
+          role="tabpanel"
+          aria-labelledby="profile-tab"
+          tabindex="0"
+        >
+          <div class="justify-content-center d-flex">
+            <div class="container" data-aos="fade-up">
+              <div class="section-title">
+                <h2>GULA DARAH</h2>
+                <p>
+                  Gula darah adalah kadar glukosa atau gula dalam darah
+                  seseorang. Gula darah normal sebelum makan adalah 70-99 mg/dl.
+                  Kadar gula darah yang terlalu tinggi atau terlalu rendah dapat
+                  menyebabkan gangguan kesehatan seperti diabetes dan
+                  hipoglikemia.
+                </p>
+              </div>
+              <div class="row">
+                <div class="col"></div>
+                <div class="col" style="width: 50%">
+                  <h3 class="text-center cool-text">GULA DARAH</h3>
+                  <hr />
+                </div>
+                <div class="col"></div>
+              </div>
+              <div class="row">
+                <div class="col-lg-4">
+                  <img src="assets/img/imt/imt.png" class="img-fluid" alt="" />
+                </div>
+                <div class="col-lg-4 pt-4 pt-lg-0 content">
+                  <p class="fst-italic text-center">
+                    Masukan Inputan yang benar agar tidak salah dalam
+                    penghitungan gula darah
+                  </p>
+                  <div class="row">
+                    <div class="col-lg-12">
+                      <div class="row">
+                        <div class="form-floating mb-3 col">
+                          <input
+                            type="number"
+                            id="gulaDarah"
+                            aria-label="First name"
+                            class="form-control"
+                            placeholder="."
+                          />
+
+                          <label for="gulaDarah" style="margin-left: 5px"
+                            >Kadar Gula Darah (mg/dL):</label
+                          >
+                        </div>
+                      </div>
+                      <div class="form-floating mb-3">
+                        <button onclick="cekGulaDarah()" class="cool-button">
+                          Cek
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
+        <div
+          class="tab-pane fade"
+          id="contact-tab-pane"
+          role="tabpanel"
+          aria-labelledby="contact-tab"
+          tabindex="0"
+        >
+          <div class="container" data-aos="fade-up">
+            <div class="section-title">
+              <h2>TEKANAN DARAH</h2>
+              <p>
+                Tekanan darah merupakan tekanan yang terjadi pada pembuluh darah
+                arteri ketika darah kita di pompa oleh jantung untuk di alirkan
+                ke seluruh anggota tubuh
+              </p>
+            </div>
+            <div class="row">
+              <div class="col"></div>
+              <div class="col" style="width: 50%">
+                <h3 class="text-center cool-text">TEKANAN DARAH</h3>
+                <hr />
+              </div>
+              <div class="col"></div>
+            </div>
+            <div class="row">
+              <div class="col-lg-4">
+                <img src="assets/img/imt/imt.png" class="img-fluid" alt="" />
+              </div>
+              <div class="col-lg-4 pt-4 pt-lg-0 content">
+                <p class="fst-italic text-center">
+                  Masukan Inputan yang benar agar tidak salah dalam penghitungan
+                  IMT
+                </p>
+                <div class="row">
+                  <div class="col-lg-12">
+                    <div class="row">
+                      <div class="form-floating mb-3 col">
+                        <input
+                          type="number"
+                          id="sistolik"
+                          aria-label="First name"
+                          class="form-control"
+                          placeholder="."
+                        />
+
+                        <label for="sistolik" style="margin-left: 5px"
+                          >Sistolik:</label
+                        >
+                      </div>
+
+                      <div class="form-floating mb-3">
+                        <input
+                          type="number"
+                          id="diastolik"
+                          aria-label="Last name"
+                          class="form-control"
+                          placeholder="."
+                        />
+                        <label for="diastolik" style="margin-left: 5px"
+                          >Diastolik:</label
+                        >
+                      </div>
+                    </div>
+                    <div class="form-floating mb-3">
+                      <button
+                        onclick="hitungTekananDarah()"
+                        class="cool-button"
+                      >
+                        Cek</button
+                      ><br /><br />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="text-center">
+        <span id="hasil" class="text-center cool-text"></span>
+        <span id="penjelasan" class="text-center cool-text"></span>
+      </div>
       </section>
       <!-- End About Section -->
 
-      <!-- ======= TEKANAN DARAH ======= -->
-      <section id="about" class="about">
-        <div class="container" data-aos="fade-up">
-          <div class="section-title">
-            <h2>TEKANAN DARAH</h2>
-            <p>
-              Tekanan darah merupakan tekanan yang terjadi pada pembuluh darah
-              arteri ketika darah kita di pompa oleh jantung untuk di alirkan ke
-              seluruh anggota tubuh.
-            </p>
-          </div>
-          <div class="row">
-            <div class="col"></div>
-            <div class="col" style="width: 50%">
-              <h3
-                class="text-center"
-                style="font-size: clamp(20px, 3vw, 100px)"
-              >
-                IMT &amp; PENJELASAN
-              </h3>
-              <hr />
-            </div>
-            <div class="col"></div>
-          </div>
-          <div class="row">
-            <div class="col-lg-4">
-              <img src="assets/img/imt/imt.png" class="img-fluid" alt="" />
-            </div>
-            <div class="col-lg-8 pt-4 pt-lg-0 content">
-              <p class="fst-italic">
-                Masukan Inputan yang benar agar tidak salah dalam penghitungan
-                IMT
-              </p>
-              <div class="row">
-                <div class="col-lg-6">
-                  <ul>
-                    <li>
-                      <div class="row">
-                        <div class="form-floating mb-3 col">
-                          <input
-                            type="number"
-                            id="berat-badan"
-                            aria-label="First name"
-                            class="form-control"
-                            placeholder="."
-                          />
-
-                          <label for="berat-badan">Berat Badan (kg):</label>
-                        </div>
-
-                        <div class="form-floating mb-3">
-                          <input
-                            type="number"
-                            id="tinggi-badan"
-                            aria-label="Last name"
-                            class="form-control"
-                            placeholder="."
-                          />
-                          <label for="tinggi-badan">Tinggi Badan (cm):</label>
-                        </div>
-                      </div>
-                    </li>
-                    <li class="d-flex align-items-center text-center">
-                      <div class="form-floating mb-3">
-                        <button onclick="hitungBMI()" class="cool-button">
-                          Hitung
-                        </button>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <span class="text-center cool-text" id="hasil"></span>
-          </div>
-        </div>
-      </section>
+    
       <!-- End Facts Section -->
 
       <!-- ======= Skills Section ======= -->
