--- a/index.html
+++ b/index.html
@@ -958,23 +958,105 @@
         var tinggi = document.getElementById("tinggi-badan").value;
         var bmi = berat / Math.pow(tinggi / 100, 2);
         var keterangan = "";
+        var saran = "";
 
-        if (bmi < 18.5) {
+        if (bmi >= 1 && bmi < 18.5) {
           keterangan = "Berat badan kurang";
+          saran =
+            "1. Konsumsi makanan yang sehat dan bergizi, termasuk sayuran, buah-buahan, protein rendah lemak, karbohidrat kompleks, dan lemak sehat. \n2. Konsumsi makanan yang lebih sering dalam jumlah kecil-kecil, daripada makan dalam jumlah besar dan jarang.\n3. Minum air yang cukup untuk membantu menjaga tubuh tetap terhidrasi. \n4. Lakukan latihan fisik secara teratur, seperti berjalan, berlari, bersepeda, atau berenang. \n5. Tidur yang cukup untuk membantu tubuh memulihkan diri dan meningkatkan metabolisme. \n6. Hindari kebiasaan merokok dan minum alkohol, karena dapat mempengaruhi nafsu makan dan mengurangi penyerapan nutrisi. \n7. Konsultasikan dengan dokter atau ahli gizi jika Anda memiliki masalah kesehatan atau ingin mengetahui program diet dan latihan yang cocok untuk Anda.";
         } else if (bmi >= 18.5 && bmi < 25) {
           keterangan = "Berat badan normal";
+          saran =
+            "1. Makanlah makanan sehat: Pilihlah makanan yang kaya akan nutrisi seperti sayuran, buah-buahan, biji-bijian, dan protein rendah lemak. Hindari makanan yang tinggi kalori dan lemak jenuh. \n2. Olahraga secara teratur: Lakukanlah olahraga setidaknya 30 menit setiap hari. Jenis olahraga yang disarankan antara lain berjalan kaki, berlari, berenang, atau bersepeda. \n3. Kurangi konsumsi gula: Batasi asupan gula, termasuk gula dalam minuman manis, kue-kue, dan camilan. \n4. Minum banyak air: Minumlah setidaknya 8 gelas air putih setiap hari. Ini membantu menjaga tubuh tetap terhidrasi dan mengurangi rasa lapar. \n5.Tidur yang cukup: Tidurlah selama 7-8 jam setiap malam. Kekurangan tidur dapat meningkatkan nafsu makan dan menyebabkan peningkatan berat badan. \n6. Hindari stress: Cari cara untuk mengurangi stres, seperti meditasi, yoga, atau kegiatan yang menenangkan. \n7. Jaga keseimbangan kalori: Upayakan untuk mengonsumsi kalori yang sama dengan yang Anda bakar setiap hari. Ini dapat membantu menjaga berat badan tetap stabil.";
         } else if (bmi >= 25 && bmi < 30) {
           keterangan = "Berat badan berlebih";
+          saran =
+            "1. Lakukan olahraga secara teratur: Cobalah untuk melakukan olahraga setidaknya 30 menit per hari. Pilih aktivitas fisik yang menyenangkan seperti berjalan, bersepeda atau berenang. \n2. Kurangi konsumsi kalori: Kurangi konsumsi makanan yang mengandung lemak dan gula tinggi. Makanlah lebih banyak buah-buahan, sayuran, dan sumber protein rendah lemak seperti ikan dan ayam tanpa kulit. \n3. Perbaiki pola makan: Makanlah lebih sering dan dalam porsi kecil. Jangan melewatkan sarapan, dan hindari ngemil di malam hari. \n4. Perbanyak minum air putih: Minumlah air putih secara teratur untuk membantu membuang racun dan menjaga tubuh tetap terhidrasi. \n5. Hindari minuman beralkohol: Hindari minuman beralkohol dan minuman manis berkalori tinggi. \n6. Tidur yang cukup: Tidurlah selama 7-8 jam per hari untuk membantu mengontrol nafsu makan dan menjaga metabolisme tetap sehat. \n7. Konsultasikan dengan dokter: Jika Anda mengalami kesulitan menurunkan berat badan atau memiliki kondisi medis yang mendasar, konsultasikan dengan dokter atau ahli gizi.";
         } else if (bmi >= 30) {
-          keterangan =
-            "Obesitas <br> Obesitas adalah penyakit yang terjadi ketika seseorang kelebihan berat badan atau memiliki banyak lemak ekstra. Obesitas dapat meningkatkan risiko berbagai penyakit seperti diabetes, penyakitjantung, stroke dan beberapa jenis kanker. Nutrisi seimbang Makanlahmakanan yang tinggi serat, protein, dan rendah kalori, serta kurangi makanan yang tinggi lemak, gula, dan garam. Hindari makanan olahandan makanan cepat saji serta perbanyak konsumsi sayur dan buahsegar. Preferensi Makanan Cobalah makan dalam porsi kecil tapisering dan hindari makan malam. Jangan melewatkan sarapan, karenasarapan dapat membantu metabolisme Anda. Kurangi konsumsi minumanbersoda dan alkohol Jika Anda sangat gemuk, bicarakan dengan dokterAnda tentang program penurunan berat badan yang sesuai, seperti B.diet rendah kalori, pengobatan, atau operasi penurunan berat badan.";
+          keterangan = "Obesitas";
+          saran =
+            "1. Obesitas adalah penyakit yang terjadi ketika seseorang kelebihan berat badan atau memiliki banyak lemak ekstra. \nObesitas dapat meningkatkan risiko berbagai penyakit seperti diabetes, penyakit jantung, stroke dan beberapa jenis kanker. \n2.Nutrisi seimbang Makanlah makanan yang tinggi serat, protein, dan rendah kalori, serta kurangi makanan yang tinggi lemak, gula, dan garam. \n3. Hindari makanan olahan dan makanan cepat saji serta perbanyak konsumsi sayur dan buah segar. \n4. Preferensi Makanan : Cobalah makan dalam porsi kecil tapi sering dan hindari makan malam. Jangan melewatkan sarapan, karena sarapan dapat membantu metabolisme Anda. \n5. Jika Anda sangat gemuk, bicarakan dengan dokter Anda tentang program penurunan berat badan yang sesuai, seperti B. diet rendah kalori, pengobatan, atau operasi penurunan berat badan.";
         } else {
-          keterangan = "Masukkan nilai yang valid";
+          keterangan = "Mohon di isi terlebih dahulu";
+          saran = "Masukan nilai yang valid";
         }
 
         var hasil = "BMI Anda: " + bmi.toFixed(1) + "<br>";
         hasil += "Keterangan: " + keterangan;
         document.getElementById("hasil").innerHTML = hasil;
+        var kata = "Penjelasan: " + saran;
+        document.getElementById("penjelasan").innerHTML = kata;
+      }
+
+      function cekGulaDarah() {
+        // Ambil nilai kadar gula darah dari input
+        var gulaDarah = document.getElementById("gulaDarah").value;
+        var keterangan3 = "";
+        var saran2 = "";
+
+        // Cek kadar gula darah dan tampilkan hasil
+        if (gulaDarah >= 1 && gulaDarah < 70) {
+          keterangan3 = "Kadar gula darah rendah";
+          saran3 =
+            "1. Makan dengan teratur:\nIngatlah untuk makan setidaknya tiga kali sehari dan jangan melewatkan waktu makan. Perut kosong dapat menurunkan gula darah, jadi penting untuk makan secara teratur.\n2. Pilih makanan yang sehat:\nUsahakan untuk memilih makanan yang sehat dan berserat tinggi seperti sayuran, buah-buahan dan biji-bijian.\nHindari makanan tinggi gula atau karbohidrat sederhana seperti permen, minuman manis, roti tawar dan nasi putih.\n3. Minum cukup air:\nMinum banyak air dapat membantu menjaga kadar gula darah tetap stabil.\n4. Olahraga:\nOlahraga teratur dapat meningkatkan sensitivitas insulin dan membantu menjaga kadar gula darah tetap stabil. Pilih olahraga yang Anda sukai, seperti hiking, berenang, atau bersepeda.\n5. Konsumsi makanan dengan gula alami:\nMakanan yang mengandung gula alami, seperti buah, kurma, madu, atau sirup maple, dapat membantu menjaga kadar gula darah tetap stabil.\n6. Periksakan kesehatan secara teratur:\nPenting untuk memeriksa kadar gula darah secara teratur dan berkonsultasi dengan dokter jika terjadi perubahan yang signifikan.";
+        } else if (gulaDarah >= 70 && gulaDarah < 140) {
+          keterangan3 = "Kadar gula darah normal";
+          saran3 =
+            "1. Makan makanan yang sehat dan seimbang:\nKontrol asupan karbohidrat, protein, dan lemak. Kurangi konsumsi makanan manis dan karbohidrat sederhana, yang dapat meningkatkan gula darah secara drastis.\n2. Berolahraga secara teratur:\nOlahraga dapat meningkatkan sensitivitas insulin dan membantu tubuh mengatur gula darah dengan lebih efektif. Usahakan untuk melakukan olahraga minimal 30 menit setiap hari atau tiga kali seminggu.\n3. Hindari stres:\nStres dapat meningkatkan kadar gula darah.\n4. Minum air yang cukup:\nAir membantu mengatur gula darah dengan membantu tubuh menghilangkan kelebihan gula dalam urin.";
+        } else if (gulaDarah >= 140 && gulaDarah < 200) {
+          keterangan3 = "Kadar gula darah tinggi, prediabetes";
+          saran3 =
+            "1. Lakukan perubahan gaya hidup sehat seperti:\n* Mengurangi stres dan tidur yang cukup setiap hari.\n* Meningkatkan aktivitas fisik dengan olahraga teratur minimal.\n* Menjaga pola makan yang seimbang dengan mengonsumsi makanan yang rendah gula, rendah karbohidrat, dan tinggi serat.\n2. Memantau kadar gula darah secara teratur dengan mengukur kadar gula darah di rumah atau melakukan tes darah di laboratorium.\n3. Mengonsumsi obat-obatan yang diresepkan oleh dokter, jika diperlukan.\n4. Konsultasikan dengan dokter atau ahli gizi untuk perawatan yang tepat dan terus ikuti rejimen yang direkomendasikan.";
+        } else if (gulaDarah >= 200) {
+          keterangan3 = "Kadar gula darah sangat tinggi, diabetes";
+          saran3 =
+            "1. Jadikan pola makan Anda lebih sehat dengan memilih makanan yang rendah karbohidrat dan gula, tinggi serat dan kaya nutrisi.\n2. Tingkatkan aktivitas fisik dengan berolahraga secara rutin dan konsisten minimal 30 menit setiap hari.\n3. Memantau kadar gula darah secara teratur dengan mengukur kadar gula darah di rumah atau melakukan tes darah di laboratorium.\n4. Mengonsumsi obat-obatan yang diresepkan oleh dokter, seperti insulin atau obat diabetes oral, jika diperlukan,Menghindari kebiasaan merokok dan mengonsumsi alkohol secara berlebihan.";
+        } else {
+          keterangan3 = "Masukkan nilai yang valid";
+          saran3 = "bababababab";
+        }
+
+        hasil += "Hasil: " + keterangan3;
+        document.getElementById("hasil").innerHTML = "hasil:" + keterangan3;
+        var kata = "Saran: " + saran3;
+        document.getElementById("penjelasan").innerHTML = kata;
+      }
+
+      function hitungTekananDarah() {
+        var sistolik = parseInt(document.getElementById("sistolik").value);
+        var diastolik = parseInt(document.getElementById("diastolik").value);
+        var keterangan = "";
+        var saran2 = "";
+
+        if (isNaN(sistolik) || isNaN(diastolik)) {
+          keterangan = "Silahkan masukkan nilai tekanan darah";
+          saran2 = "P";
+        } else if (sistolik < 0 || diastolik < 0) {
+          keterangan = "Tidak ada tekanan darah negatif";
+          saran2 = "Masukan nilai yang valid";
+        } else if (sistolik >= 180 || diastolik >= 120) {
+          keterangan = "Tekanan darah Anda sangat tinggi, segera temui dokter";
+          saran2 =
+            "Oleh karena itu, hal terbaik yang dapat dilakukan adalah segera menghubungi nomor darurat medis seperti 119 atau membawa orang yang terkena kondisi tersebut ke unit gawat darurat terdekat. \n1. Tetap tenang dan jangan panik. Tekanan darah yang sangat tinggi dapat menyebabkan kepanikan dan kecemasan, yang dapat memperburuk kondisi.\n2. Santai dan istirahatlah dalam posisi yang nyaman. Cobalah untuk tidak melakukan aktivitas apa pun dan beristirahatlah dalam posisi yang nyaman, mis. B. duduk atau berbaring.\n3. Periksa tekanan darah Anda secara teratur. Jika monitor tekanan darah tersedia, periksa secara teratur untuk memantau tekanan darah.\n4. Hindari makanan atau minuman yang dapat memperburuk kondisi, seperti B. Minuman yang terlalu asin atau berkafein.\n5. Minum air putih secukupnya. Minum air putih yang cukup dapat membantu mengurangi tekanan darah dan menjaga tubuh tetap terhidrasi.\nIngatlah bahwa tekanan darah yang sangat tinggi adalah keadaan darurat medis yang harus ditangani dengan cepat dan tepat oleh tenaga kesehatan profesional. Oleh karena itu, jika Anda atau orang terdekat Anda menderita kondisi ini, jangan ragu untuk segera mencari pertolongan medis.";
+        } else if (sistolik >= 140 || diastolik >= 90) {
+          keterangan = "Tekanan darah Anda tinggi";
+          saran2 =
+            "1. Lakukan pemeriksaan medis:\nJika Anda memiliki gejala tekanan darah tinggi, seperti sakit kepala, pusing, atau dada sesak, segera hubungi dokter. \n2. Perubahan gaya hidup:\nPerubahan gaya hidup dapat membantu mengontrol tekanan darah Anda. Beberapa perubahan yang dapat Anda lakukan adalah: Makan makanan yang sehat dan rendah garam \n* Berolahraga secara teratur \n* Mengurangi konsumsi alkohol \n* Berhenti merokok \n* Mengurangi stres \n3. Minum obat sesuai petunjuk dokter:\nJika dokter meresepkan obat untuk mengontrol tekanan darah Anda, pastikan untuk minum obat tersebut sesuai petunjuk dokter. Jangan menghentikan penggunaan obat tanpa persetujuan dokter. \n4. Pantau tekanan darah Anda secara teratur \nPeriksa tekanan darah Anda secara teratur di rumah dan dokumentasikan hasilnya. Beri tahu dokter Anda tentang tekanan darah Anda pada setiap kunjungan.";
+        } else if (sistolik >= 120 || diastolik >= 80) {
+          keterangan = "Tekanan darah Anda normal";
+          saran2 =
+            "1. Makan yang sehat: \nMakan makanan yang sehat dan seimbang seperti sayuran, buah-buahan, biji-bijian, ikan, kacang-kacangan dan daging tanpa lemak. Hindari makanan yang mengandung lemak jenuh dan kolesterol tinggi.\n2. Berolahraga secara teratur:\nLakukan olahraga minimal 30 menit setiap hari, seperti berjalan kaki, joging, berenang, atau bersepeda. Olahraga dapat membantu meningkatkan sirkulasi dan mempertahankan tekanan darah normal.\n3. Kurangi konsumsi garam:\nBatasi penggunaan garam, karena garam dapat meningkatkan tekanan darah. Jangan menambahkan garam pada makanan dan hindari makanan olahan yang tinggi garam.\n4. Kurangi konsumsi alkohol:\nMinum alkohol dapat meningkatkan tekanan darah, jadi batasi atau hindari alkohol sama sekali.";
+        } else {
+          keterangan = "Tekanan darah Anda rendah";
+          saran2 =
+            "1. Konsumsi air yang cukup:\nMinum cukup air dapat membantu menjaga jumlah darah dalam tubuh, yang mencegah penurunan tekanan darah. Dianjurkan untuk minum setidaknya 8 gelas air setiap hari.\n2. Konsumsi  gara dalam jumlah yang cukup:\nGaram dapat membantu menjaga keseimbangan elektrolit dalam tubuh, yang mencegah penurunan tekanan darah. Namun, konsumsi garam yang berlebihan juga dapat berdampak negatif bagi kesehatan. \nDianjurkan untuk makan garam secara merata.\n3. Konsumsi makanan yang mengandung natrium:\nSodium adalah mineral yang membantu menjaga keseimbangan elektrolit dalam tubuh. Mengonsumsi makanan dengan sodium, seperti daging, ikan, susu, dan kacang-kacangan, dapat membantu menjaga tekanan \ndarah.\n4. Hindari berdiri terlalu lama:\nBerdiri terlalu lama dapat menyebabkan darah menggenang di kaki dan membuat kaki terasa lemas, yang dapat menyebabkan tekanan darah rendah.\nJika Anda harus berdiri dalam waktu lama, usahakan untuk bergerak atau mengangkat kaki secara teratur.";
+        }
+
+        hasil += "Hasil: " + keterangan;
+        document.getElementById("hasil").innerHTML = "Hasil: " + keterangan;
+
+        var kata = "Saran: " + saran2;
+        document.getElementById("penjelasan").innerHTML = kata;
       }
     </script>
   </body>
