--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@
     <link href="assets/css/style.css" rel="stylesheet" />
 
     <style>
-      body{
+      body {
         background-color: rgb(248, 248, 248);
       }
       .glaz {
-        background: rgba(0, 0, 0, 0.02);
+        background: rgba(0, 0, 0, 0.05);
         border-radius: 16px;
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.25);
         backdrop-filter: blur(2.9px);
         -webkit-backdrop-filter: blur(2.9px);
         width: 90%;
         margin: auto;
         height: auto;
         transition: 250ms ease;
-        margin: 30px;
+        margin: auto;
         padding-top: 20px;
         padding-bottom: 30px;
       }
@@ -80,31 +80,118 @@
         padding-right: 16px;
         transition: 250ms ease;
       }
-      .cool-button {
-        border-color: transparent;
-        border-radius: 30px;
-        background-color: rgb(13, 110, 253);
-        color: white;
-        padding-top: 8px;
-        padding-bottom: 8px;
-        padding-left: 16px;
-        padding-right: 16px;
-        transition: 250ms ease;
-      }
-      .cool-button:hover {
-        border-color: transparent;
-        border-radius: 30px;
-        background-color: rgb(5, 99, 187);
-        color: white;
-        padding-top: 8px;
-        padding-bottom: 8px;
-        padding-left: 16px;
-        padding-right: 16px;
-        transition: 250ms ease;
-      }
       .cool-text {
         color: rgb(36, 36, 36);
         font-size: 15px;
+      }
+
+      .div-cooler {
+        margin: auto;
+        width: 40%;
+        transition: all 0.5s ease;
+      }
+      .div-cooler:hover {
+        margin: auto;
+        width: 60%;
+      }
+
+      .button-cooler {
+        padding: 10px;
+        width: 100%;
+        min-height: 16px;
+        font-weight: 400;
+        color: white;
+        background: rgb(13, 110, 253);
+        background: linear-gradient(
+          90deg,
+          rgb(13, 110, 253) 0%,
+          rgb(5, 99, 187) 100%
+        );
+        border: none;
+        border-radius: 1000px;
+        box-shadow: 12px 12px 24px transparent;
+        transition: all 0.3s ease-in-out 0s;
+        cursor: pointer;
+        outline: none;
+        position: relative;
+      }
+      .button-cooler:hover {
+        padding: 10px;
+
+        padding-left: 10%;
+        padding-right: 10%;
+        min-height: 16px;
+        font-weight: 400;
+        background: rgb(13, 110, 253);
+        background: linear-gradient(
+          90deg,
+          rgb(5, 99, 187) 0%,
+          rgb(13, 110, 253) 100%
+        );
+        color: rgb(13, 110, 253);
+        border: none;
+        border-radius: 1000px;
+        box-shadow: 12px 12px 24px transparent;
+        transition: all 0.3s ease-in-out 0s;
+        cursor: pointer;
+        outline: none;
+      }
+
+      .button-before::before {
+        content: "";
+        border-radius: 1px;
+        padding: calc(10px + 8px);
+        min-height: calc(10px + 8px);
+        border: 3px solid rgb(41, 127, 255);
+        box-shadow: 0 0 5px rgb(13, 110, 253, 0.64);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(45deg);
+        opacity: 0;
+        transition: all 0.3s ease-in-out 0s;
+      }
+
+      .button-cooler:hover,
+      .button-cooler:focus {
+        color: white;
+      }
+
+      .button-before:hover::before,
+      .button-before:focus::before {
+        opacity: 1;
+      }
+
+      .button-before::after {
+        content: "";
+        width: 50px;
+        height: 50px;
+        border-radius: 100%;
+        border: 2px solid rgb(13, 110, 253);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        animation: ring 2s infinite;
+      }
+
+      .button-before:hover::after,
+      .button-before:focus::after {
+        animation: none;
+        display: none;
+      }
+
+      @keyframes ring {
+        0% {
+          width: 30px;
+          height: 30px;
+          opacity: 1;
+        }
+        100% {
+          width: 70px;
+          height: 70px;
+          opacity: 0;
+        }
       }
     </style>
   </head>
@@ -231,7 +318,7 @@
             </li>
           </ul>
           <div id="particles-js"></div>
-          <div class="glaz">
+          <div class="glaz mt-4">
             <div
               class="tab-content"
               id="myTabContent"
@@ -309,12 +396,14 @@
                                   >Tinggi Badan (cm):</label
                                 >
                               </div>
-                            </div>
-
-                            <div class="form-floating mb-3">
-                              <button onclick="hitungBMI()" class="cool-button">
-                                Cek
-                              </button>
+                              <div class="div-cooler mt-4 mb-3">
+                                <button
+                                  onclick="hitungBMI()"
+                                  class="button-cooler button-before"
+                                >
+                                  <div>Cek</div>
+                                </button>
+                              </div>
                             </div>
                           </div>
                         </div>
@@ -380,12 +469,12 @@
                                 >
                               </div>
                             </div>
-                            <div class="form-floating mb-3">
+                            <div class="div-cooler mt-4 mb-3">
                               <button
                                 onclick="cekGulaDarah()"
-                                class="cool-button"
+                                class="button-cooler button-before"
                               >
-                                Cek
+                                <div>Cek</div>
                               </button>
                             </div>
                           </div>
@@ -462,13 +551,13 @@
                               >
                             </div>
                           </div>
-                          <div class="form-floating mb-3">
+                          <div class="div-cooler mt-4 mb-3">
                             <button
                               onclick="hitungTekananDarah()"
-                              class="cool-button"
+                              class="button-cooler button-before"
                             >
-                              Cek</button
-                            ><br /><br />
+                              <div>Cek</div>
+                            </button>
                           </div>
                         </div>
                       </div>
@@ -864,7 +953,7 @@
 
           <div class="row mt-1">
             <div class="col-lg-4">
-              <div class="info">
+              <div class="info" style="background-color: transparent">
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
@@ -891,6 +980,7 @@
                 method="post"
                 role="form"
                 class="php-email-form"
+                style="background-color: transparent"
               >
                 <div class="row">
                   <div class="col-md-6 form-group">
