--- a/index.html
+++ b/index.html
@@ -41,10 +41,28 @@
     <link rel="stylesheet" href="assets/css/scroll.css">
 
     <style>
+      body {
+        background-color: rgb(248, 248, 248);
+      }
+      .glaz {
+        background: rgba(0, 0, 0, 0.05);
+        border-radius: 16px;
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.25);
+        backdrop-filter: blur(2.9px);
+        -webkit-backdrop-filter: blur(2.9px);
+        width: 90%;
+        margin: auto;
+        height: auto;
+        transition: 250ms ease;
+        margin: auto;
+        padding-top: 20px;
+        padding-bottom: 30px;
+      }
+
       .cool-button {
         border-color: transparent;
         border-radius: 30px;
-        background-color: rgb(0, 0, 255);
+        background-color: rgb(13, 110, 253);
         color: white;
         padding-top: 8px;
         padding-bottom: 8px;
@@ -52,11 +70,10 @@
         padding-right: 16px;
         transition: 250ms ease;
       }
-
       .cool-button:hover {
         border-color: transparent;
         border-radius: 30px;
-        background-color: rgb(77, 77, 255);
+        background-color: rgb(5, 99, 187);
         color: white;
         padding-top: 8px;
         padding-bottom: 8px;
@@ -64,10 +81,118 @@
         padding-right: 16px;
         transition: 250ms ease;
       }
-
       .cool-text {
         color: rgb(36, 36, 36);
         font-size: 15px;
+      }
+
+      .div-cooler {
+        margin: auto;
+        width: 40%;
+        transition: all 0.5s ease;
+      }
+      .div-cooler:hover {
+        margin: auto;
+        width: 60%;
+      }
+
+      .button-cooler {
+        padding: 10px;
+        width: 100%;
+        min-height: 16px;
+        font-weight: 400;
+        color: white;
+        background: rgb(13, 110, 253);
+        background: linear-gradient(
+          90deg,
+          rgb(13, 110, 253) 0%,
+          rgb(5, 99, 187) 100%
+        );
+        border: none;
+        border-radius: 1000px;
+        box-shadow: 12px 12px 24px transparent;
+        transition: all 0.3s ease-in-out 0s;
+        cursor: pointer;
+        outline: none;
+        position: relative;
+      }
+      .button-cooler:hover {
+        padding: 10px;
+
+        padding-left: 10%;
+        padding-right: 10%;
+        min-height: 16px;
+        font-weight: 400;
+        background: rgb(13, 110, 253);
+        background: linear-gradient(
+          90deg,
+          rgb(5, 99, 187) 0%,
+          rgb(13, 110, 253) 100%
+        );
+        color: rgb(13, 110, 253);
+        border: none;
+        border-radius: 1000px;
+        box-shadow: 12px 12px 24px transparent;
+        transition: all 0.3s ease-in-out 0s;
+        cursor: pointer;
+        outline: none;
+      }
+
+      .button-before::before {
+        content: "";
+        border-radius: 1px;
+        padding: calc(10px + 8px);
+        min-height: calc(10px + 8px);
+        border: 3px solid rgb(41, 127, 255);
+        box-shadow: 0 0 5px rgb(13, 110, 253, 0.64);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) rotate(45deg);
+        opacity: 0;
+        transition: all 0.3s ease-in-out 0s;
+      }
+
+      .button-cooler:hover,
+      .button-cooler:focus {
+        color: white;
+      }
+
+      .button-before:hover::before,
+      .button-before:focus::before {
+        opacity: 1;
+      }
+
+      .button-before::after {
+        content: "";
+        width: 50px;
+        height: 50px;
+        border-radius: 100%;
+        border: 2px solid rgb(13, 110, 253);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        animation: ring 2s infinite;
+      }
+
+      .button-before:hover::after,
+      .button-before:focus::after {
+        animation: none;
+        display: none;
+      }
+
+      @keyframes ring {
+        0% {
+          width: 30px;
+          height: 30px;
+          opacity: 1;
+        }
+        100% {
+          width: 70px;
+          height: 70px;
+          opacity: 0;
+        }
       }
     </style>
   </head>
